--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Telegram Web App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <style>
       /* Основные стили */
       body {
           margin: 0;
-          padding: 0;
           min-height: 100vh;
           background-color: #f5f5f5;
+          padding-bottom: env(--tg-content-safe-area-inset-bottom);
+          /* Учет вырезов экрана */
       }
 
       /* Стили Telegram */
@@ -28,6 +29,8 @@
           flex-direction: column;
           gap: 16px;
           overflow-y: auto;
+          max-height: calc(var(--tg-viewport-stable-height) - 32px);
+          /* Вычисляем максимальную высоту через переменную Telegram */
       }
 
       /* Стили для полей ввода в Material Design */
@@ -39,6 +42,7 @@
           box-shadow: 0 2px 2px -2px rgba(0,0,0,0.14),
           0 1px 5px 0 rgba(0,0,0,0.12),
           0 1px 3px 0 rgba(0,0,0,0.2);
+          transition: box-shadow 0.3s ease;
       }
 
       .form-field input {
@@ -132,6 +136,11 @@
   // Инициализация Telegram Web App
   const tg = window.Telegram.WebApp;
   tg.ready();
+
+  // Обновление размеров при появлении/скрытии клавиатуры
+  tg.onUpdate((e) => {
+    // Внешние обновления (если нужны)
+  });
 </script>
 </body>
 </html>
