--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
           min-height: 100vh;
           background-color: #f5f5f5;
           padding-bottom: env(--tg-content-safe-area-inset-bottom);
-          /* Учет вырезов экрана */
       }
 
       /* Стили Telegram */
@@ -30,7 +29,7 @@
           gap: 16px;
           overflow-y: auto;
           max-height: calc(var(--tg-viewport-stable-height) - 32px);
-          /* Вычисляем максимальную высоту через переменную Telegram */
+          transition: max-height 0.2s ease;
       }
 
       /* Стили для полей ввода в Material Design */
@@ -69,7 +68,7 @@
   <div class="content">
     <!-- Генерация 20 полей ввода -->
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input type="text" placeholder="Input 2">
     </div>
     <div class="form-field">
       <input type="text" placeholder="Input 2">
@@ -137,10 +136,19 @@
   const tg = window.Telegram.WebApp;
   tg.ready();
 
-  // Обновление размеров при появлении/скрытии клавиатуры
-  tg.onUpdate((e) => {
-    // Внешние обновления (если нужны)
-  });
+  // Обработчик изменения состояния клавиатуры
+  function updateLayout() {
+    // Обновляем высоту контента через CSS-переменные
+    const content = document.querySelector('.content');
+    content.style.maxHeight = `calc(var(--tg-viewport-stable-height) - 32px)`;
+  }
+
+  // Подписываемся на события клавиатуры
+  tg.onEvent('keyboardOpen', updateLayout);
+  tg.onEvent('keyboardClose', updateLayout);
+
+  // Инициализация при старте
+  updateLayout();
 </script>
 </body>
 </html>
