--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           --primary-bg: #f5f5f5;
           --secondary-bg: white;
           --text-color: #212121;
-          --shadow-color: rgba(0,0,0,0.14);
+          --shadow-color: rgba(0, 0, 0, 0.14);
           --input-border: #cccccc;
       }
 
@@ -24,7 +24,7 @@
           --primary-bg: #121212;
           --secondary-bg: #212121;
           --text-color: white;
-          --shadow-color: rgba(255,255,255,0.1);
+          --shadow-color: rgba(255, 255, 255, 0.1);
           --input-border: #4d4d4d;
       }
 
@@ -84,67 +84,227 @@
 <body>
 <div class="tg-scope">
   <div class="content">
-    <!-- 20 полей ввода -->
+    <!-- 20 полей ввода с настройками клавиатуры -->
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
     <div class="form-field">
-      <input type="text" placeholder="Input 1">
+      <input
+        type="text"
+        placeholder="Input 1"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
-    <!-- ... остальные поля ... -->
+    <!-- ... остальные поля с теми же атрибутами ... -->
     <div class="form-field">
-      <input type="text" placeholder="Input 20">
+      <input
+        type="text"
+        placeholder="Input 20"
+        enterkeyhint="done"
+        autocapitalize="off"
+        autocorrect="off"
+        inputmode="text"
+        class="tg-input"
+      >
     </div>
   </div>
 </div>
@@ -154,10 +314,19 @@
   const tg = window.Telegram.WebApp;
   tg.ready();
 
+  // Функция для закрытия клавиатуры по нажатию "Готово"
+  document.querySelectorAll('.tg-input').forEach(input => {
+    input.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') {
+        tg.closeKeyboard(); // Закрываем клавиатуру
+      }
+    });
+  });
+
   function applyTheme() {
     document.body.setAttribute(
       'data-theme',
-      tg.isDarkMode() ? 'dark' : 'light'
+      tg.isDarkMode() ? 'dark' : 'light',
     );
   }
 
