--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
   <style>
       /* Глобальные настройки */
       * {
-          box-sizing: border-box; /* Важно для корректного расчета размеров */
+          box-sizing: border-box;
           margin: 0;
           padding: 0;
+      }
+
+      html, body {
+          width: 100%;
+          max-width: 100vw; /* Ограничиваем ширину по видимой области */
+          overflow: hidden;
       }
 
       :root {
           --primary-bg: #f5f5f5;
           --secondary-bg: white;
           --text-color: #212121;
-          --shadow-color: rgba(0, 0, 0, 0.14);
+          --shadow-color: rgba(0,0,0,0.14);
           --input-border: #cccccc;
       }
 
@@ -24,7 +30,7 @@
           --primary-bg: #121212;
           --secondary-bg: #212121;
           --text-color: white;
-          --shadow-color: rgba(255, 255, 255, 0.1);
+          --shadow-color: rgba(255,255,255,0.1);
           --input-border: #4d4d4d;
       }
 
@@ -32,12 +38,14 @@
           background-color: var(--primary-bg);
           color: var(--text-color);
           padding-bottom: env(--tg-content-safe-area-inset-bottom);
+          max-width: 100%; /* Дополнительное ограничение */
       }
 
       .tg-scope {
           display: flex;
           flex-direction: column;
           height: 100%;
+          width: 100%; /* Занять всю доступную ширину */
       }
 
       .content {
@@ -48,7 +56,7 @@
           gap: 16px;
           overflow-y: auto;
           max-height: calc(var(--tg-viewport-stable-height) - 32px);
-          width: 100%; /* Ограничиваем контейнер */
+          width: 100%; /* Занять всю ширину родителя */
       }
 
       .form-field {
@@ -58,11 +66,12 @@
           box-shadow: 0 2px 2px -2px var(--shadow-color),
           0 1px 5px 0 var(--shadow-color),
           0 1px 3px 0 var(--shadow-color);
-          width: 100%; /* Форма занимает всю доступную ширину контейнера */
+          width: 100%; /* Ширина поля ввода */
+          max-width: 100%; /* Запретить переполнение */
       }
 
       .form-field input {
-          width: 100%; /* Поле ввода заполняет родительский контейнер */
+          width: 100%;
           padding: 12px;
           border: 1px solid var(--input-border);
           border-radius: 4px;
@@ -70,6 +79,7 @@
           background-color: transparent;
           color: var(--text-color);
           outline: none;
+          display: block; /* Убрать горизонтальные отступы */
       }
 
       .form-field input:focus {
@@ -84,225 +94,19 @@
 <body>
 <div class="tg-scope">
   <div class="content">
-    <!-- 20 полей ввода с настройками клавиатуры -->
+    <!-- 20 полей ввода -->
     <div class="form-field">
       <input
         type="text"
         placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
         class="tg-input"
       >
     </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <div class="form-field">
-      <input
-        type="text"
-        placeholder="Input 1"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
-        class="tg-input"
-      >
-    </div>
-    <!-- ... остальные поля с теми же атрибутами ... -->
+    <!-- ... остальные поля ... -->
     <div class="form-field">
       <input
         type="text"
         placeholder="Input 20"
-        enterkeyhint="done"
-        autocapitalize="off"
-        autocorrect="off"
-        inputmode="text"
         class="tg-input"
       >
     </div>
@@ -314,22 +118,23 @@
   const tg = window.Telegram.WebApp;
   tg.ready();
 
-  // Функция для закрытия клавиатуры по нажатию "Готово"
+  // Закрытие клавиатуры при Enter
   document.querySelectorAll('.tg-input').forEach(input => {
-    input.addEventListener('keydown', (e) => {
+    input.addEventListener('keypress', (e) => {
       if (e.key === 'Enter') {
-        tg.closeKeyboard(); // Закрываем клавиатуру
+        e.preventDefault();
+        tg.closeKeyboard();
       }
     });
   });
 
+  // Тема
   function applyTheme() {
     document.body.setAttribute(
       'data-theme',
-      tg.isDarkMode() ? 'dark' : 'light',
+      tg.isDarkMode() ? 'dark' : 'light'
     );
   }
-
   applyTheme();
   tg.onUpdate(applyTheme);
 </script>
